<resources>
    <string name="app_name">Driver</string>
    <string name="textData">基本資料</string>
    <string name="textBank">銀行帳戶</string>
    <string name="textOrder">訂單記錄</string>
    <string name="textIncome">收入統計分析</string>
    <string name="textGuide">駕駛指南</string>
    <string name="textOpinion">意見反應</string>
    <string name="textName">Name</string>
    <string name="textScore">4.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textOpen">Open</string>
    <string name="textClose">Close</string>
    <string name="textOff">下線</string>
    <string name="textOn">上線</string>
    <string name="textLocationNotFound">location is not found</string>
    <string name="textUpdateFail">update fail</string>
    <string name="textUpdateSuccess">update succesfully</string>
    <string name="textNoNetwork">no network connection available</string>
    <string name="textYes">確定</string>
    <string name="textMessage">你有新訂單,請確認接單!</string>
    <string name="textNo">取消</string>
    <string name="textCancel">確定要取消訂單嗎？</string>
    <string name="textCancelOrder">取消訂單</string>
    <string name="textStartDrive">開始代駕</string>
    <string name="textToCustomer">導航至顧客位置</string>
    <string name="textToEnd">導航至目的地</string>
    <string name="textFinish">完成訂單</string>
    <string name="textOriginNotFound">origin is not found</string>
    <string name="textDestinationNotFound">destination is not found</string>
    <string name="textOk">確認</string>
    <string name="textLogout">登出</string>
    <string name="textCancelCheck">你的訂單已被取消</string>
    <string name="textPassword">密碼</string>
    <string name="textLogin">登入</string>
    <string name="textForgetPassword">忘記密碼</string>
    <string name="textSignUpYet">尚未擁有帳戶嗎？</string>
    <string name="textConfirm">確認</string>
    <string name="textPasswordChangeSuccess">密碼已更改完成</string>
    <string name="textEmail">Email</string>
    <string name="textRealName">真實姓名</string>
    <string name="textPhoneNumber">手機號碼</string>
    <string name="textBankAccountName">帳戶名稱</string>
    <string name="textBankCode">銀行代號(共三碼)</string>
    <string name="textSignUP">註冊</string>
    <string name="textCheckNumber">驗證碼</string>
    <string name="textNotGetCheckNumber">未收到驗證碼</string>
    <string name="textContinue">下一頁</string>
    <string name="textIdPhoto">身份證正反面</string>
    <string name="textIdPhotoFront">身份證正面</string>
    <string name="textIdPhotoBack">身份證反面</string>
    <string name="textId">身份證</string>
    <string name="textDriverLicense">職業駕照正反面</string>
    <string name="textLicense">職業駕照</string>
    <string name="textDriverSecure">駕駛責任險</string>
    <string name="textWhiteEmail">請輸入註冊信箱</string>
    <string name="textWhiteNewPassword">請輸入新密碼</string>
    <string name="textCheckNewPassword">請再次輸入新密碼</string>
    <string name="textSignUpDetail">"請詳填以下資料，完成後會有專人審查，謝謝！  "</string>
    <string name="textPhoneNumberCheckDetail">"已寄送簡訊，請輸入收到的驗證碼  "</string>
    <string name="textChangePassword">更改密碼</string>
    <string name="textSetBankAccount">銀行帳戶設定</string>
    <string name="textCheck">驗證</string>
    <string name="textBankAccount">銀行帳戶</string>
    <string name="textPreferencesSaved">偏好設定已儲存</string>
    <string name="textOrderNumber">訂單編號</string>
    <string name="textOrderDate">行程日期</string>
    <string name="textOrderMoney">行程費用</string>
    <string name="textOrderPlate">行程車輛</string>
    <string name="textOrderCustomer">行程顧客</string>
    <string name="textOrderHelp">需要協助處理這趟行程的問題嗎？</string>
    <string name="textStartAddress">出發地</string>
    <string name="textEndAddress">目的地</string>
    <string name="textNoOrdersFound">您沒有訂單記錄</string>
    <string name="textPersonalPhoto">上傳照片</string>
    <string name="textFiles">身分證、職業駕照、駕駛責任險</string>
    <string name="textEditDone">完成修改</string>
    <string name="textTakePicture">拍照</string>
    <string name="textPickPicture">從相簿選擇</string>
    <string name="textCommit">申請審核</string>
    <string name="textInsuranceDate">yyyy/mm/dd</string>
    <string name="textInsuranceDateTitle">到期日</string>
    <string name="textDriverLicenceFront">職業駕照正面</string>
    <string name="textDriverLicenceBack">職業駕照反面</string>
    <string name="textNoInsuranceFound">找不到保險資料</string>
    <string name="textDateIsInvalid">請輸入保險到期日</string>
    <string name="textImageIsInvalid">請上傳保險資料</string>
    <string name="textNoCameraApp">相機功能無法使用</string>
    <string name="textNoCrop">無法裁切相片</string>
    <string name="textDirNotCreated">Directory Picture 無法建立</string>
    <string name="textNoImageCropAppFound">無法取得截圖</string>
    <string name="textShouldGrant">permission to access external</string>
    <string name="textUserEdit">編輯個人資料</string>
    <string name="textPhoneIsInvalid">手機不能為空值</string>
    <string name="textEmailIsInvalid">Email不能為空值</string>
    <string name="textNoUserFound">找不到使用者資料</string>
    <string name="textNameIsInvalid">姓名不能為空值</string>
    <string name="textTryAgain">請再試一次</string>
    <string name="textNoMap">Google Map 無法顯示</string>
    <string name="textUserPhoto">大頭貼</string>
    <string name="textOnline">上線</string>
    <string name="textOffLine">下線</string>
    <string name="textMain">首頁</string>
    <string name="textDrive">代駕</string>
    <string name="textEdit">編輯</string>
    <string name="textReaction">意見反應</string>
    <string name="textInsertFail">上傳失敗</string>
    <string name="textInsertSuccess">上傳成功</string>
    <string name="textCannotbenull">輸入不能為空</string>
    <string name="textClear">清除</string>
    <string name="textOrderCount">行程數</string>
    <string name="textWeekIncomeDetail">當週收入</string>
    <string name="textNoOpinionsFound">no opinions found</string>

</resources>
