<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.user.userEditFragment">

    <TextView
        android:id="@+id/tvN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="28dp"
        android:text="@string/textRealName"
        android:textColor="#1465C0" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/textRealName"
        android:inputType="textPersonName"
        android:text="UserName"
        android:textColor="#1465C0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:hint="@string/textPhoneNumber"
        android:text="@string/textPhoneNumber"
        android:textColor="#1465C0" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0987654321"
        android:textColor="#1465C0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:text="@string/textEmail"
        android:textColor="#1465C0" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
        android:text="wxy@zzz.com"
        android:textColor="#1465C0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/main_button"
            android:text="@string/textEditDone"
            android:textColor="#1565C0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>